<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backgroud_main2"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/person_regist_title"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/regist_back"
            android:layout_width="45dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:background="@drawable/head_selector"
            android:clickable="true"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/head_back" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="40dp" >

            <EditText
                android:id="@+id/regist_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_box"
                android:hint="@string/person_regist_user"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/regist_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_box"
                android:hint="@string/person_regist_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/regist_again_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_box"
                android:hint="@string/person_regist_ding"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/regist_mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_box"
                android:hint="@string/person_regist_mail"
                android:textColor="#000"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/check_gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/check_nan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_gender"
                    android:paddingLeft="22dp"
                    android:text="@string/person_regist_nan"
                    android:textColor="#555"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/check_nv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:button="@drawable/checkbox_gender"
                    android:paddingLeft="22dp"
                    android:text="@string/person_regist_nv"
                    android:textColor="#555"
                    android:textSize="17sp" />
            </RadioGroup>

            <Button
                android:id="@+id/regist_sumbit"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/yuan_shencheng_qiancheng"
                android:text="@string/person_regist_btn"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>